--- a/README
+++ b/README
@@ -1,7 +1,8 @@
-📚 Book Recommender Bot
+# 📚 Book Recommender Bot
 
 Умный Telegram-бот для поиска и рекомендации книг с интеграцией OpenAI GPT-4o-mini. Бот помогает пользователям находить идеальные книги для чтения на основе различных критериев и предоставляет персонализированные рекомендации с помощью искусственного интеллекта.
-✨ Особенности
+
+## ✨ Особенности
 
     🔍 Поиск по критериям - фильтрация книг по жанру, рейтингу, цене, языку, автору и году издания
 
@@ -15,7 +16,7 @@
 
     🐳 Docker-развертывание - полная контейнеризация с PostgreSQL и Redis
 
-🛠 Технологический стек
+## 🛠 Технологический стек
 
     Backend: Python 3.11, Aiogram 3.3
 
@@ -41,49 +42,40 @@
 
     Telegram Bot Token
 
-🚀 Быстрый старт
+## 🚀 Быстрый старт
+
 1. Клонирование репозитория
-bash
 
 git clone https://github.com/yourusername/book-recommender-bot.git
 cd book-recommender-bot
 
 2. Настройка окружения
-bash
 
 cp .env.example .env
 
 Отредактируйте файл .env:
-env
 
-# Telegram Bot
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 
-# OpenAI
 OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_MODEL=gpt-4o-mini
 
-# Database
 DB_HOST=postgres
 DB_PORT=5432
 DB_NAME=book_bot
 DB_USER=postgres
 DB_PASSWORD=your_secure_password
 
-# Redis
 REDIS_HOST=redis
 REDIS_PORT=6379
 
-# App Settings
 DEBUG=False
 LOG_LEVEL=INFO
 
 3. Запуск через Docker Compose
-bash
 
 docker-compose up -d --build
 
 4. Проверка работы
-bash
 
 docker-compose logs -f bot
