--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-# 📚 Book Recommender Bot
+📚 Book Recommender Bot
 
 Умный Telegram-бот для поиска и рекомендации книг с интеграцией OpenAI GPT-4o-mini. Бот помогает пользователям находить идеальные книги для чтения на основе различных критериев и предоставляет персонализированные рекомендации с помощью искусственного интеллекта.
 
-## ✨ Особенности
+✨ Особенности
 
     🔍 Поиск по критериям - фильтрация книг по жанру, рейтингу, цене, языку, автору и году издания
 
@@ -16,7 +16,7 @@
 
     🐳 Docker-развертывание - полная контейнеризация с PostgreSQL и Redis
 
-## 🛠 Технологический стек
+🛠 Технологический стек
 
     Backend: Python 3.11, Aiogram 3.3
 
@@ -42,7 +42,7 @@
 
     Telegram Bot Token
 
-## 🚀 Быстрый старт
+🚀 Быстрый старт
 
 1. Клонирование репозитория
 
